# openSL-ES-study

./: README.md
app/: build.gradle
app/src/androidTest/java/wh/opensles_study/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/wh/opensles_study/: AudioPlayer.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  audioplay.cpp  audioplay.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/wh/opensles_study/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
